validacia rozjebana, nefunguje, layout hotovy, prechod z yup na formik (asi)

--- a/src/index.css
+++ b/src/index.css
@@ -124,3 +124,26 @@ footer {
   margin-top: 30px;
   text-align: center;
 }
+
+.preview {
+  /* margin-left: 60em; */
+  position: fixed;
+  margin-top: 2em;
+  margin-bottom: 4em;
+  background-color: #fff;
+  padding: 2em;
+  padding-top: 3em;
+  line-height: 12px;
+  height: 47em;
+  /* width: 90%; */
+  box-shadow: 0 14px 28px rgba(0, 0, 0, 0.07), 0 10px 10px rgba(0, 0, 0, 0.001);
+  border-radius: 15px;
+  /* top: 2em; */
+  margin-left: -3em;
+  /* right: 36em; */
+  font-size: 0.9em;
+}
+
+.box {
+  display: flex;
+}
